chore: change some placeholder text, update readme

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "type": "git",
     "url": ""
   },
-  "author": "author",
+  "author": "author_name",
   "license": "GPL-3.0-or-later",
   "bugs": {
     "url": ""
