--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "dev": "parcel watch --no-hmr",
-    "build": "parcel build",
+    "build": "parcel build --no-cache",
     "format": "prettier --write ./assets/**/* --no-error-on-unmatched-pattern",
     "prepare": "husky install"
   },
