--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,10 @@
         "psr-4": {
             "Root\\" : "includes/"
         }
+    },
+    "config": {
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true
+        }
     }
 }
