--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {},
   "devDependencies": {
     "parcel": "^2.0.0-rc.0",
-    "prettier": "2.5.1",
+    "prettier": "^2.5.1",
     "husky": "^7.0.0"
   },
   "scripts": {
