--- a/composer.json
+++ b/composer.json
@@ -3,16 +3,16 @@
         "lint" : "mkdir -p logs; vendor/bin/phpcs -s > ./logs/log.txt",
         "format": "vendor/bin/phpcbf -p",
         "dist":  "sh bin/dist.sh",
-        "prefix-namespaces": [
+        "namespace-dependencies": [
             "sh -c 'test -f ./bin/strauss.phar || curl -o bin/strauss.phar -L -C - https://github.com/BrianHenryIE/strauss/releases/latest/download/strauss.phar'",
             "php bin/strauss.phar",
             "composer dump-autoload"
         ],
         "post-install-cmd": [
-            "@prefix-namespaces"
+            "@namespace-dependencies"
         ],
         "post-update-cmd": [
-            "@prefix-namespaces"
+            "@namespace-dependencies"
         ]
     },
     "require-dev": {
