--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "my_plugin_shortname",
   "version": "1.0.0",
   "description": "",
-  "dependencies": {},
   "devDependencies": {
+    "husky": "^7.0.0",
     "parcel": "^2.0.0-rc.0",
-    "prettier": "^2.5.1",
-    "husky": "^7.0.0"
+    "prettier": "^2.5.1"
   },
   "scripts": {
     "dev": "parcel watch --no-hmr",
