dump autoload after composer update

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
             "@namespace-dependencies"
         ],
         "post-update-cmd": [
-            "@namespace-dependencies"
+            "@namespace-dependencies",
+            "composer dumpautoload"
         ]
     },
     "require-dev": {
